--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header>
         <div class="top">
             <a href="index.html">
-                <h1 id="logo">MEET2DAY</h1>
+                <h1 id="logo">meet2day</h1>
             </a>
             <a href="login.html"><img id="icon-user" src="icon/user.svg"></a>
             <img id="icon-search" src="icon/search.svg">
@@ -73,101 +73,141 @@
         </form>
         <div style="margin:45px 0 0 0">
             <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:6px; color:#adadad;">[모임번호 19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:6px; color:#adadad; float:right;">조회수: 100</span>
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
                 <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 10px; padding: 5px; color: #adadad;">
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
                     <span class="meet-single-date">2019-08-08</span> ㅣ
                     <span class="meet-single-time">19:00~22:00</span> ㅣ
                     <span class="meet-single-number">4명 </span> ㅣ
                     <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청" style="float:right">
+                    </label>
                 </div>
                 <div style="font-size: 10px; padding: 3px;">
                     <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
                     <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
                     <span class="meet-single-scrap"> ㅣ스크랩</span>
-                    <input class="button1" type="button" value="참여신청" style="float:right">
+
                 </div>
             </div>
 
             <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:6px; color:#adadad;">[모임번호 19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:6px; color:#adadad; float:right;">조회수: 100</span>
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
                 <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 10px; padding: 5px; color: #adadad;">
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
                     <span class="meet-single-date">2019-08-08</span> ㅣ
                     <span class="meet-single-time">19:00~22:00</span> ㅣ
                     <span class="meet-single-number">4명 </span> ㅣ
                     <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청" style="float:right">
+                    </label>
                 </div>
                 <div style="font-size: 10px; padding: 3px;">
                     <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
                     <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
                     <span class="meet-single-scrap"> ㅣ스크랩</span>
-                    <input class="button1" type="button" value="참여신청" style="float:right">
+
                 </div>
             </div>
 
             <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:6px; color:#adadad;">[모임번호 19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:6px; color:#adadad; float:right;">조회수: 100</span>
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
                 <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 10px; padding: 5px; color: #adadad;">
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
                     <span class="meet-single-date">2019-08-08</span> ㅣ
                     <span class="meet-single-time">19:00~22:00</span> ㅣ
                     <span class="meet-single-number">4명 </span> ㅣ
                     <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청" style="float:right">
+                    </label>
                 </div>
                 <div style="font-size: 10px; padding: 3px;">
                     <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
                     <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
                     <span class="meet-single-scrap"> ㅣ스크랩</span>
-                    <input class="button1" type="button" value="참여신청" style="float:right">
+
                 </div>
             </div>
 
             <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:6px; color:#adadad;">[모임번호 19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:6px; color:#adadad; float:right;">조회수: 100</span>
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
                 <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 10px; padding: 5px; color: #adadad;">
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
                     <span class="meet-single-date">2019-08-08</span> ㅣ
                     <span class="meet-single-time">19:00~22:00</span> ㅣ
                     <span class="meet-single-number">4명 </span> ㅣ
                     <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청" style="float:right">
+                    </label>
                 </div>
                 <div style="font-size: 10px; padding: 3px;">
                     <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
                     <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
                     <span class="meet-single-scrap"> ㅣ스크랩</span>
-                    <input class="button1" type="button" value="참여신청" style="float:right">
+
                 </div>
             </div>
 
             <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:6px; color:#adadad;">[모임번호 19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:6px; color:#adadad; float:right;">조회수: 100</span>
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
                 <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 10px; padding: 5px; color: #adadad;">
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
                     <span class="meet-single-date">2019-08-08</span> ㅣ
                     <span class="meet-single-time">19:00~22:00</span> ㅣ
                     <span class="meet-single-number">4명 </span> ㅣ
                     <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청" style="float:right">
+                    </label>
                 </div>
                 <div style="font-size: 10px; padding: 3px;">
                     <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
                     <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
                     <span class="meet-single-scrap"> ㅣ스크랩</span>
-                    <input class="button1" type="button" value="참여신청" style="float:right">
+
                 </div>
             </div>
 
+            <div class="meet-single">
+                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
+                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
+                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
+                <div style="font-size: 11px; padding: 5px; color: #adadad;">
+                    <span class="meet-single-date">2019-08-08</span> ㅣ
+                    <span class="meet-single-time">19:00~22:00</span> ㅣ
+                    <span class="meet-single-number">4명 </span> ㅣ
+                    <span class="meet-single-cost"> 20,000원</span>
+                    <label>
+                        <input class="button1" type="button" value="참여신청">
+                    </label>
+                </div>
+                <div style="font-size: 10px; padding: 3px;">
+                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
+                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
+                    <span class="meet-single-scrap"> ㅣ스크랩</span>
 
+                </div>
+            </div>
+            <label>
+                <input class="button2" type="button" value="+ 더보기">
+            </label>
         </div>
     </section>
 
     <section class="colum">
         <h4>테마별 분류</h4>
+        <div>
+            <img src="/image/ctgr_study.jpg">
+        </div>
     </section>
 
     <section class="colum">
