--- a/index.html
+++ b/index.html
@@ -16,198 +16,104 @@
 
 <body>
     <header>
-        <div class="top">
+        <div class="header-main">
             <a href="index.html">
                 <h1 id="logo">meet2day</h1>
             </a>
             <a href="login.html"><img id="icon-user" src="icon/user.svg"></a>
             <img id="icon-search" src="icon/search.svg">
-
         </div>
     </header>
 
-    <nav class="minitabs">
-        <ul>
-            <li><a href="index.html" class="minitabs_active">홈</a></li>
-            <li><a href="join.html">모임참여</a></li>
-            <li><a href="open.html">모임개설</a></li>
-            <li><a href="mymeet.html">내모임</a></li>
-        </ul>
+    <nav>
+        <div class="minitabs">
+            <ul>
+                <li><a href="index.html" class="minitabs_active">홈</a></li>
+                <li><a href="join.html">모임참여</a></li>
+                <li><a href="open.html">모임개설</a></li>
+                <li><a href="mymeet.html">내모임</a></li>
+            </ul>
+        </div>
     </nav>
 
-    <section class="mainimage">
-        <img src="image/slideshow1.jpg" id="mainImage" alt="Image" style="width:100%;height:auto;padding:3px 0 0 0;">
-        <script>
-            var myImage = document.getElementById("mainImage");
-            var imageArray = ["image/slideshow1.jpg", "image/slideshow2.jpg", "image/slideshow3.jpg"];
-            var imageIndex = 0;
+    <section>
+        <figure class="image-main">
+            <img src="image/slideshow1.jpg" id="mainImage" alt="Image">
+            <script>
+                var myImage = document.getElementById("mainImage");
+                var imageArray = ["image/slideshow1.jpg", "image/slideshow2.jpg", "image/slideshow3.jpg"];
+                var imageIndex = 0;
 
-            function changeImage() {
-                myImage.setAttribute("src", imageArray[imageIndex]);
-                imageIndex++;
-                if (imageIndex >= imageArray.length) {
-                    imageIndex = 0;
+                function changeImage() {
+                    myImage.setAttribute("src", imageArray[imageIndex]);
+                    imageIndex++;
+                    if (imageIndex >= imageArray.length) {
+                        imageIndex = 0;
+                    }
                 }
-            }
-            setInterval(changeImage, 2000);
-        </script>
+                setInterval(changeImage, 2000);
+            </script>
+        </figure>
     </section>
 
-    <section class="colum">
-        <form>
-            <h4 style="padding: 5px">지역별 분류</h4>
-            <select class="search-region">
-                <option selected>서울</option>
-                <option>경기</option>
-                <option>인천</option>
-                <option>충남</option>
-                <option>충북</option>
-                <option>전남</option>
-                <option>전북</option>
-                <option>경남</option>
-                <option>경북</option>
-            </select>
-            <label>
-                <input class="search-region-detail" type="text">
-            </label>
-        </form>
-        <div style="margin:45px 0 0 0">
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청" style="float:right">
-                    </label>
+    <section>
+        <div class="colum">
+            <form>
+                <h4 style="padding: 5px">지역별 분류</h4>
+                <select class="search-region">
+                    <option selected>서울</option>
+                    <option>경기</option>
+                    <option>인천</option>
+                    <option>충남</option>
+                    <option>충북</option>
+                    <option>전남</option>
+                    <option>전북</option>
+                    <option>경남</option>
+                    <option>경북</option>
+                </select>
+                <label>
+                    <input class="search-region-detail" type="text">
+                </label>
+            </form>
+            <div style="margin:45px 0 0 0">
+                <div class="meet-single">
+                    <span class="meet-single-id">모임번호 [19080800001]</span>
+                    <span class="meet-single-read">ㅣ 조회수 100</span>
+                    <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
+                    <div class="meet-single-info">
+                        <span class="meet-single-date">2019-08-08</span> ㅣ
+                        <span class="meet-single-time">19:00~22:00</span> ㅣ
+                        <span class="meet-single-number">4명 </span> ㅣ
+                        <span class="meet-single-cost"> 20,000원</span>
+                        <label>
+                            <input class="button-apply" type="submmit" value="참여신청">
+                        </label>
+                    </div>
+                    <div class="meet-single-category" style="">
+                        <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
+                        <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
+                        <span class="meet-single-scrap"> ㅣ스크랩</span>
+                    </div>
                 </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
+                <label>
+                    <input class="button-more" type="button" value="더보기 >">
+                </label>
             </div>
-
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청" style="float:right">
-                    </label>
-                </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
-            </div>
-
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청" style="float:right">
-                    </label>
-                </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
-            </div>
-
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청" style="float:right">
-                    </label>
-                </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
-            </div>
-
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청" style="float:right">
-                    </label>
-                </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
-            </div>
-
-            <div class="meet-single">
-                <span class="meet-single-id" style="padding:0; margin:0; font-size:10px; color:#adadad;">모임번호 [19080800001]</span>
-                <span class="meet-single-read" style="padding:0; margin:0; font-size:10px; color:#adadad;">ㅣ 조회수 100</span>
-                <h5 class="meet-single-title">오늘 저녁 퇴근 후 피맥하실 직장인 모이세요. 4명/성별무관/서울강남</h5>
-                <div style="font-size: 11px; padding: 5px; color: #adadad;">
-                    <span class="meet-single-date">2019-08-08</span> ㅣ
-                    <span class="meet-single-time">19:00~22:00</span> ㅣ
-                    <span class="meet-single-number">4명 </span> ㅣ
-                    <span class="meet-single-cost"> 20,000원</span>
-                    <label>
-                        <input class="button1" type="button" value="참여신청">
-                    </label>
-                </div>
-                <div style="font-size: 10px; padding: 3px;">
-                    <span class="meet-single-region" style="font-style:italic; color:#00e2e2">#서울/강남구</span>
-                    <span class="meet-single-category" style="font-style:italic; color:#00e2e2"> #사교/미팅/파티</span>
-                    <span class="meet-single-scrap"> ㅣ스크랩</span>
-
-                </div>
-            </div>
-            <label>
-                <input class="button2" type="button" value="+ 더보기">
-            </label>
         </div>
     </section>
 
     <section class="colum">
         <h4>테마별 분류</h4>
-        <div>
-            <img src="/image/ctgr_study.jpg">
-        </div>
+        <figure class="image-button">
+           <div>
+            <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                <figcaption>학습/교육</figcaption>
+                </div>
+                         <div>
+            <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                <figcaption>학습/교육</figcaption>
+                </div>  
+        </figure>
     </section>
 
     <section class="colum">
