--- a/index.html
+++ b/index.html
@@ -4,57 +4,132 @@
 <head>
     <meta charset="utf-8">
     <title>번개모임 플랫폼 &ndash; Meet Today</title>
-    <meta name="keywords" content="모임, 소모임, 번개, 취미, 액티비티, 미팅">
+    <meta name="keywords" content="번개모임, 즉석모임, 소모임, 취미, 키즈, 여가, 액티비티, 미팅">
     <meta name="description" content="함께 하는 세상의 모든 활동">
     <meta name="author" content="유병현">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!--
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:site_name" content="밋투데이">
+    <meta property="og:url" content="https://www.meet2day.kr">
+    <meta property="og:title" content="밋투데이">
+    <meta property="og:description" content="번개모임, 즉석모임 플랫폼">
+    <meta property="og:image" content="https://www.meet2day.kr/assets/og/share.jpg"/>
+    <meta property="og:image:width" content="1200"/>
+    <meta property="og:image:height" content="630"/>   
+   
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+    <link rel="manifest" href="favicon/manifest.json">
+    <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+-->
+
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js"></script>
-
 </head>
 
 <body>
     <header>
-        <div class="header-main">
-            <a href="index.html">
-                <h1 id="logo">meet2day</h1>
-            </a>
-            <a href="login.html"><img id="icon-user" src="icon/user.svg"></a>
-            <img id="icon-search" src="icon/search.svg">
-        </div>
+        <h1 id="logo"><a href="index.html">meet2day</a></h1>
+        <p id="login"><a href="login.html">로그인 및 회원가입</a></p>
+        <a href="login.html"><img id="icon-user" src="icon/user.svg"></a>
+        <a href="#a"><img id="icon-search" src="icon/search.svg"></a>
+
     </header>
 
     <nav>
-        <div class="minitabs">
-            <ul>
-                <li><a href="index.html" class="minitabs_active">홈</a></li>
-                <li><a href="join.html">모임참여</a></li>
-                <li><a href="open.html">모임개설</a></li>
-                <li><a href="mymeet.html">내모임</a></li>
-            </ul>
+        <div class="outer">
+            <div class="inner">
+                <div class="cell">
+                    <a href="index.html" class="cell_home">홈</a>
+
+                </div>
+                <div class="cell">
+                    <button class="dropbtn">모임참여<i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">전체보기</a>
+                        <a href="#">지역별</a>
+                        <a href="#">테마별</a>
+                        <a href="#">날짜별</a>
+
+                    </div>
+                </div>
+                <div class="cell">
+                    <a href="open.html">모임개설</a>
+                </div>
+                <div class="cell">
+                    <a href="mymeet.html">내모임</a>
+
+                </div>
+                <div class="cell">
+                    <a href="community.html">커뮤니티</a>
+                </div>
+
+            </div>
         </div>
     </nav>
 
-    <section>
-        <figure class="image-main">
-            <img src="image/slideshow1.jpg" id="mainImage" alt="Image">
-            <script>
-                var myImage = document.getElementById("mainImage");
-                var imageArray = ["image/slideshow1.jpg", "image/slideshow2.jpg", "image/slideshow3.jpg"];
-                var imageIndex = 0;
 
-                function changeImage() {
-                    myImage.setAttribute("src", imageArray[imageIndex]);
-                    imageIndex++;
-                    if (imageIndex >= imageArray.length) {
-                        imageIndex = 0;
-                    }
-                }
-                setInterval(changeImage, 2000);
-            </script>
+    <section>
+        <figure class="slideshow-container">
+
+            <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="http://localhost/image/slideshow1.jpg" style="width:100%">
+                <div class="text">Caption Text</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="http://localhost/image/slideshow2.jpg" style="width:100%">
+                <div class="text">Caption Two</div>
+            </div>
+
+            <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="http://localhost/image/slideshow3.jpg" style="width:100%">
+                <div class="text">Caption Three</div>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+
+            <br>
+
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+
         </figure>
     </section>
+
+
+
+
+
+
+
+
+
 
     <section>
         <div class="colum">
@@ -105,14 +180,48 @@
     <section class="colum">
         <h4>테마별 분류</h4>
         <figure class="image-button">
-           <div>
-            <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
-                <figcaption>학습/교육</figcaption>
-                </div>
-                         <div>
-            <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
-                <figcaption>학습/교육</figcaption>
-                </div>  
+            <ul>
+
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+                <li>
+                    <a href="#"><img src="/image/ctgr_study.jpg" alt="study and education"></a>
+                    <figcaption>학습/교육</figcaption>
+
+                </li>
+            </ul>
         </figure>
     </section>
 
