--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         <p id="login"><a href="login.html">로그인 및 회원가입</a></p>
         <a href="login.html"><img id="icon-user" src="icon/user.svg"></a>
         <a href="#a"><img id="icon-search" src="icon/search.svg"></a>
-
     </header>
 
     <nav>
@@ -57,34 +56,32 @@
             <div class="inner">
                 <div class="cell">
                     <a href="index.html" class="cell_home">홈</a>
-
                 </div>
                 <div class="cell">
-                    <button class="dropbtn">모임참여<i class="fa fa-caret-down"></i>
-                    </button>
+                   <div class="dropdown">
+                     <button class="dropbtn">모임참여        </button>
                     <div class="dropdown-content">
                         <a href="#">전체보기</a>
                         <a href="#">지역별</a>
                         <a href="#">테마별</a>
                         <a href="#">날짜별</a>
-
-                    </div>
+                    </div>  
+                       
+                   </div>
+                    
                 </div>
                 <div class="cell">
                     <a href="open.html">모임개설</a>
                 </div>
                 <div class="cell">
                     <a href="mymeet.html">내모임</a>
-
                 </div>
                 <div class="cell">
                     <a href="community.html">커뮤니티</a>
                 </div>
-
             </div>
         </div>
     </nav>
-
 
     <section>
         <figure class="slideshow-container">
