--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                  <div class="cell">
                 <div class="dropdown">
                     <button class="dropbtn" style="font-size:1.4em">+</button>
-                    <div class="dropdown-content" style="right:auto">
+                    <div class="dropdown-content2">
                         <a href="notice.html">공지사항</a>
                         <a href="site-intro.html">사이트소개</a>
                         <a href="contact.html">문의하기</a>
